# personal-gpt

./: .gitignore  README.md  pyproject.toml
chat_interface/: app.py  chat_manager.py
chat_interface/chats/: 203455e7-2fb8-42db-acf2-737d2a884648.txt  650af4e8-b6c1-41c6-a0e1-c10bc4b1e1fd.txt
chat_interface/templates/: index.html
